--- a/html/Views/Index/dashboard.phtml
+++ b/html/Views/Index/dashboard.phtml
@@ -26,7 +26,7 @@
       <td><?php echo $value['name']; ?></td>
       <td><?php echo $value['email']; ?></td>
       <td><?php echo $value['password']; ?></td>
-      <td><a href="<?php echo URL;?>delete/<?php echo $value['id']; ?>">X</a></td>
+      <td><a href="<?php echo URL;?>remove/<?php echo $value['id']; ?>">X</a></td>
     </tr>
     <?php endforeach ?>
   </tbody>
