--- a/html/Views/Index/index.phtml
+++ b/html/Views/Index/index.phtml
@@ -14,7 +14,7 @@
   </div>
 
   <div class="col-md-4">
-    <label for="validationCustomUsername" class="form-label">Password</label>
+    <label for="validationCustomUsername" class="form-label">Email</label>
     <div class="input-group has-validation">
       <input type="email" name="email" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
       <div class="invalid-feedback">
